security-openid-connect-multi-tenancy-quickstart/config/secure-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ssl-oidc-app
  namespace: oidc
spec:
  selector:
    app.kubernetes.io/name: security-openid-connect-multi-tenancy-quickstart
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  ports:
     - name: http
       protocol: TCP
       port: 8443
       targetPort: 8443
